# tabular-dict

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  setup.py
include/: flatten.h
src/: flatten.cpp  py_module.cpp
tests/: test_flatten.py  test_golden.py  test_inflate.py  test_make_path.py  test_path.py  test_path_split.py  test_path_split_slash.py  test_timing.py
